[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/technologies/technology.gd" type="Script" id=1]
[ext_resource path="res://small_font_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://GFX/empty_button.png" type="Texture" id=3]
[ext_resource path="res://GFX/empty_button_hover.png" type="Texture" id=4]

[node name="technology" type="Node2D"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 39.0
margin_bottom = 55.0

[node name="Line2D" type="Line2D" parent="MarginContainer"]
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = -1606848257

[node name="p_in" type="Position2D" parent="MarginContainer"]
position = Vector2( 0, 24 )

[node name="p_out" type="Position2D" parent="MarginContainer"]
position = Vector2( 52, 24 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 39.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="name" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 39.0
margin_bottom = 11.0
grow_horizontal = 2
grow_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "technology
name"
align = 1
valign = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 15.0
margin_right = 39.0
margin_bottom = 47.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 3.0
margin_right = 35.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="cost" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 39.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 2 )
text = "Cost"
align = 1
valign = 1
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
